--- a/python-0.ipynb
+++ b/python-0.ipynb
@@ -26,7 +26,63 @@
     },
     {
       "metadata": {
+        "id": "7NwATWSrHv2J",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Python tips and tricks"
+      ]
+    },
+    {
+      "metadata": {
         "id": "PX3wUerFF6aP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "TAKbtZ_iIBlG",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Array / list"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "vcbel8YkIA8V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "vy0I50KcIGUm",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "Set / dictionary"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "eXYrkA3XINBf",
         "colab_type": "code",
         "colab": {}
       },
