--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -44,20 +44,33 @@
         "$$\n",
         "\n",
         "Chain rule:\n",
-        "$$\n",
+        "\n",
+        "$\n",
         "P(X,A,B) = {P(X~|~A,B).P(A,B)}\n",
-        "$$\n",
-        "$$\n",
+        "$\n",
+        "\n",
+        "$\n",
         "P(X,A,B) = {P(X~|~A,B).P(A~|~B).P(B)}\n",
-        "$$\n",
+        "$\n",
+        "\n",
+        "$\n",
+        "P(X_{1},...,X_{N}) =\\prod_{i=1}^{N} {P(X_{i}~|~X_{1},...,X_{i-1})}\n",
+        "$\n",
         "\n",
         "If A and B are independent:\n",
-        "$$\n",
+        "\n",
+        "$\n",
         "P(A,B) = {P(A).P(B)}\n",
-        "$$\n",
+        "$\n",
         "\n",
         "Warning, disjoint events are different from independent events, so if A and B are disjoint:\n",
-        "$$ P(A,B) = 0 $$\n"
+        "$$ P(A,B) = 0 $$\n",
+        "\n",
+        "Sum rule:\n",
+        "\n",
+        "$\n",
+        "P(X) = \\int_{-\\infty}^{\\infty}{P(X,Y).dY}\n",
+        "$\n"
       ]
     },
     {
