--- a/bayes.ipynb
+++ b/bayes.ipynb
@@ -33,17 +33,24 @@
       "source": [
         "# Bayes formula\n",
         "\n",
+        "$\\theta$ : parameters\n",
+        "\n",
+        "$X$ : observations\n",
         "\n",
         "$$\n",
-        "P(X~|~{\\theta}) = \\frac{P({\\theta}~|~X).P(X)}{P({\\theta})}\n",
+        "P({\\theta}~|~X) = \\frac{P(X, {\\theta})}{P(X)} = \\frac{P(X~|~{\\theta}).P(\\theta)}{P(X)}\n",
         "$$\n",
         "\n",
-        "Conditional probability:\n",
-        "$$\n",
-        "P(X~|~{\\theta}) = \\frac{P(X, {\\theta})}{P({\\theta})}\n",
-        "$$\n",
+        "$P({\\theta}~|~X) $ : posterior\n",
         "\n",
-        "Chain rule:\n",
+        "$P(X) $ : evidence\n",
+        "\n",
+        "$P(X~|~{\\theta})$  : likelihood\n",
+        "\n",
+        "$P({\\theta}) $ : prior\n",
+        "\n",
+        "\n",
+        "### Chain rule\n",
         "\n",
         "$\n",
         "P(X,A,B) = {P(X~|~A,B).P(A,B)}\n",
@@ -64,9 +71,9 @@
         "$\n",
         "\n",
         "Warning, disjoint events are different from independent events, so if A and B are disjoint:\n",
-        "$$ P(A,B) = 0 $$\n",
+        "$ P(A,B) = 0 $\n",
         "\n",
-        "Sum rule:\n",
+        "### Sum rule\n",
         "\n",
         "$\n",
         "P(X) = \\int_{-\\infty}^{\\infty}{P(X,Y).dY}\n",
